--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
+         location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_COURSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,17 +15,17 @@
     <application
         android:allowBackup="true"
         android:debuggable="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
-            android:label="@string/app_name"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_title"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar">
-            <intent-filter>
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -33,7 +33,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -41,7 +41,7 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -62,6 +62,24 @@
             android:label="@string/title_activity_List_Places"
             android:parentActivityName=".MapsActivity"
             android:screenOrientation="portrait" />
-    </application>
+        <activity
+            android:name=".ImageGallery"
+            android:label="@string/title_activity_Image_Gallery"
+            android:parentActivityName=".PlaceDetail"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ImageEnlargedActivity"
+            android:label="@string/title_activity_List_Places"
+            android:parentActivityName=".ImageGallery"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".SearchFeature"
+            android:label="@string/title_activity_Search"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+
+
+            />   </application>
 
 </manifest>
