--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -50,8 +50,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".PlaceDetail"
             android:label="@string/title_activity_place_details"
@@ -65,21 +64,32 @@
         <activity
             android:name=".ImageGallery"
             android:label="@string/title_activity_Image_Gallery"
-            android:parentActivityName=".PlaceDetail"
+
             android:screenOrientation="portrait" />
+
+        <activity android:name=".SocialMediaComments"
+            android:label="@string/title_activity_Comments"
+
+            android:screenOrientation="portrait"
+            />
+
         <activity
             android:name=".ImageEnlargedActivity"
-            android:label="@string/title_activity_List_Places"
+            android:label="@string/title_activity_Full_Image_Activity"
             android:parentActivityName=".ImageGallery"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            />
 
         <activity
             android:name=".SearchFeature"
             android:label="@string/title_activity_Search"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"
+            />
 
 
-            />   </application>
+
+
+    </application>
 
 </manifest>
