--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile files('libs/mpandroidchartlibrary-1-7-4.jar')
     compile files('libs/commons-lang3-3.4.jar')
+    compile files('libs/mpandroidchartlibrary-2-1-5.jar')
 }
